--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://sheilar-codigo.github.io",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build": "react-scripts build", 
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +22,8 @@
     "chai-bn": "^0.2.1",
     "dotenv": "^8.2.0",
     "web3": "^1.3.4"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
