--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "client",
+  "homepage": "https://sheilar-codigo.github.io/sheilar-codigo.github.io",
+  "name": "sheilar-codigo.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "16.11.0",
     "react-dom": "16.11.0",
-    "react-scripts": "3.2.0",
     "web3": "1.2.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -28,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0",
+    "react-scripts": "^3.2.0"
   }
 }
