--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,10 @@
   "dependencies": {
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-scripts": "3.2.0",
     "web3": "1.2.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -29,9 +28,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "react-scripts": "^3.2.0"
   }
 }
